# unique_words_counter

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in
include/: HelperFunctions.h
src/: HelperFunctions.cpp  main.cpp
test/unit/: CMakeLists.txt  TestUniqueWordsCounter.cpp
